{{$NEXT}}

1.121953  2012-07-13 16:52:00 EST5EDT
  * params functionality update - '_id' was getting incorrectly appended in params.

1.121952  2012-07-13 16:21:25 EST5EDT
  * more pod fixes.

1.121951  2012-07-13 16:08:45 EST5EDT
  * pod fixes

1.121950  2012-07-13 15:30:02 EST5EDT
  * Fork from Dancer::Plugin::REST
  * Adds new ':inflect' resource functionality.