@@ -1,0 +1,3 @@
+[user]
+name = Matt Phillips
+email = mattp@cpan.org
